@@ -168,6 +168,7 @@ Scott Shedden
 John Silvestri
 Craig Slusher
 Alex Smith
+Malcolm Smith
 David Smock
 Phil Snowberger
 Eddie Sohn (tr1sk)
